Fix Chat message word overflow

--- a/src/Chat.css
+++ b/src/Chat.css
@@ -27,7 +27,6 @@
 
 .chat__body{
   flex: 1;
-  flex-wrap: wrap;
   background: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png");
   background-repeat: repeat;
   background-position: center;
